@@ -5,6 +5,7 @@ x11proto-kb (1.0.4-1) UNRELEASED; urgency=low
   * Bump debhelper compat level to 5.
   * Drop Conflicts/Replaces on libxkbfile-dev and Pre-Depends on x11-common.
     This was needed for upgrades from sarge.
+  * Parse space-separated DEB_BUILD_OPTIONS, and handle parallel=N.
 
  -- Timo Aaltonen <tjaalton@ubuntu.com>  Fri, 31 Jul 2009 14:37:29 +0300
 
